hard-gists/5043521/run.log
=== Docker Run Log for 5043521 ===
Started at: Mi 29. Okt 15:19:53 CET 2025

[2025-10-29 15:19:53] START: Running container for 5043521
[2025-10-29 15:19:54] SUCCESS: Container 772c35e321be9991c5aa0978305e6b9c1484b430d154804f932c15789c39b321 started for 5043521
=== Container logs for 5043521 ===
  File "/snippet.py", line 26
    print post.title
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5043521 ===
[2025-10-29 15:19:56] INFO: Container 772c35e321be9991c5aa0978305e6b9c1484b430d154804f932c15789c39b321 has stopped
